# variable-height-double-pendulum

./: .gitignore  README.md
casadi/: accelerationConsistencyConstraint.m  createDiscretizedFunction.m  doublePendulumVariableHeight.m  doublePendulumVariableHeight3Phases.m  doublePendulumVariableHeightIntegrator.m  doublePendulumVariableHeightWithJump.m  getConstraints.m  getIntegratorDynamics.m  getPhaseDependentDynamics.m  plotOptiSolutionForDoublePendulum.m  plotOptiSolutionForDoublePendulumFeedback.m  plotOptiSolutionForDoublePendulumPlusAccelerations.m  solveVariableHeightDoublePendulum.m  solveVariableHeightDoublePendulumAsIntegrator.m  solveVariableHeightDoublePendulumFeedback.m
cpp/: CMakeLists.txt
cpp/StepUpPlanner/: CMakeLists.txt  package.xml
cpp/StepUpPlanner/cmake/: AddUninstallTarget.cmake
cpp/StepUpPlanner/src/: CMakeLists.txt
cpp/StepUpPlanner/src/core/: CMakeLists.txt
cpp/StepUpPlanner/src/core/src/: CMakeLists.txt
cpp/StepUpPlanner/src/core/src/include/StepUpPlanner/: CostWeights.h  Phase.h  Plotter.h  Rotation.h  Settings.h  SideDependentObject.h  Solver.h  Step.h
cpp/StepUpPlanner/src/core/src/src/: Phase.cpp  Plotter.cpp  Rotation.cpp  Settings.cpp  Solver.cpp  Step.cpp
cpp/StepUpPlanner/src/core/test/: CMakeLists.txt  FiveAndThreePhasesTest.cpp  RotationTest.cpp
cpp/StepUpPlanner/src/interface/: CMakeLists.txt
cpp/StepUpPlanner/src/interface/src/: CMakeLists.txt
cpp/StepUpPlanner/src/interface/src/include/: Requester.h  Responder.h
cpp/StepUpPlanner/src/interface/src/src/: Responder.cpp  ResponderMain.cpp
cpp/StepUpPlanner/src/interface/test/: ResponderTest.cpp
cpp/src/: CMakeLists.txt
cpp/src/include/StepUpPlanner/: Control.h  CostWeights.h  Phase.h  PhaseType.h  Plotter.h  References.h  Settings.h  Solver.h  State.h  Step.h
cpp/src/src/: Control.cpp  CostWeights.cpp  Phase.cpp  Plotter.cpp  References.cpp  Rotation.cpp  Settings.cpp  Solver.cpp  State.cpp  Step.cpp
cpp/test/: CMakeLists.txt  FiveAndThreePhasesTest.cpp  FivePhasesTest.cpp
matlab/casadi/: createDiscretizedFunction.m  doublePendulumVariableHeight.m  doublePendulumVariableHeightFeedback.m  doublePendulumVariableHeightIntegrator.m  plotOptiSolutionForDoublePendulum.m  solveVariableHeightDoublePendulum.m
matlab/feedbackLinearization/: controller.m  main.m  variableHeightPendulum.m
src/core/: CMakeLists.txt
src/core/src/: CMakeLists.txt
src/core/src/include/StepUpPlanner/: Phase.h  Settings.h  Solver.h  Step.h
src/core/src/src/: CostWeights.cpp  References.cpp  Rotation.cpp  Settings.cpp  Solver.cpp  State.cpp  Step.cpp
src/core/test/: CMakeLists.txt  FiveAndThreePhasesTest.cpp  RotationTest.cpp
src/interface/: CMakeLists.txt
src/interface/src/include/: Responder.h
src/interface/src/src/: Responder.cpp  ResponderMain.cpp
src/interface/test/: CMakeLists.txt  ResponderTest.cpp
